# fastapi-auth-example

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: tests.yml
migrations/: env.py
migrations/versions/: 7dfc9f79011c_initial_migration.py
src/app/: __init__.py
src/app/core/: app.py  config.py  database.py  dependencies.py  security.py
src/app/models/: user.py
src/app/routers/: auth.py
src/app/schemas/: auth.py  user.py
tests/: conftest.py  test.db  test_auth.py
